@startuml

title __FRAGMENT's Class Diagram__\n

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.fragment {
      class GymFragment {
          - mSrlGym : RefreshLayout
          - mGymList : List<Gym>
          - mLayoutManager : GridLayoutManager
          - mRcvGym : RecyclerView
          {static} + newInstance()
          # setLayoutResId()
          # bindData()
          # bindView()
          # initData()
          # initView()
          # initListener()
      }
    }
  }
  

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.fragment {
      class HistoryFragment {
          - mOrderList : List<Order>
          - mSrlHistory : RefreshLayout
          - mLayoutManager : LinearLayoutManager
          - mRcvHistory : RecyclerView
          - mPage : int
          - mLimit : int
          {static} + newInstance()
          # setLayoutResId()
          # bindData()
          # bindView()
          # initData()
          # initView()
          # initListener()
      }
    }
  }
  

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.fragment {
      class MeFragment {
          - mSrlMe : SmartRefreshLayout
          - mIvMeAvatar : ImageView
          - mTvMeNickname : TextView
          - mTvMeCoin : TextView
          - mCslMeInfo : ConstraintLayout
          - mCslMeTheme : ConstraintLayout
          - mCslMeSetting : ConstraintLayout
          - mCslMeAbout : ConstraintLayout
          {static} + newInstance()
          # setLayoutResId()
          # bindData()
          # bindView()
          # initData()
          # initView()
          # initListener()
          - setAvatar()
          - setNickName()
          - setCoin()
      }
    }
  }
  

  GymFragment -up-|> BaseFragment
  GymFragment o-- GymAdapter : mGymAdapter
  SavedState -up-|> Parcelable
  HistoryFragment -up-|> BaseFragment
  HistoryFragment o-- HistoryAdapter : mHistoryAdapter
  SavedState -up-|> Parcelable
  MeFragment -up-|> BaseFragment
  SavedState -up-|> Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
